# gatling-statistics

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  build.py  gstat.py  pyproject.toml  test_trace_mapping.py
scripts/: release.sh
src/gstat/: __init__.py  _version.py  cli.py  compare.py  gatling.py  plots.py
tests/: test_gstat.py
tests/fixtures/flat-multi/trackertest-20260424070546336-2.43.0-smoke-1u-1000req-warmup-1/: simulation.csv
tests/fixtures/invalid/ambiguous-wrappers/gatling-report-A/trackertest-20260101000000001-A/: simulation.csv
tests/fixtures/trackertest-20260424071214792-2.43.0-smoke-1u-1000req/: simulation.csv
tests/fixtures/with-ko/trackertest-20260420131959836-DHIS2-20965-export-2.42.4-4users-300s/: simulation.csv
tests/fixtures/wrapped/gatling-report-DHIS2-20965-load-2.43.0-6users-300s-24555271744-attempt-1/trackertest-20260417100043225-DHIS2-20965-load-2.43.0-6users-300s-warmup-1/: simulation.csv
tests/fixtures/wrapped/gatling-report-DHIS2-20965-load-2.43.0-6users-300s-24555271744-attempt-1/trackertest-20260417101600329-DHIS2-20965-load-2.43.0-6users-300s/: simulation.csv
